2005-01-26 Ian Rutt
 * Changed water flux fields so they replace the input rather than being spliced into it

2005-01-18 Ian Rutt
 * Plumbed in flow-routing code (and corrected a bug)

2005-01-17 Ian Rutt
 * Added flow-routing code for run-off calculation. Not connected yet. Removed 
   old (unused) routing code.

2005-01-12 Ian Rutt
 * Restored .in files and generate_ncvars.py, but not as part of build
   structure, to enable system to still be used for development, but not as
   part of build
 * Adjusted Makefiles to reflect machine-independence in GENIE build (i.e. added 
   $(OBJ_EXT), etc)

2005-01-11 Ian Rutt
 * Completed first stage changes to Glimmer structure for the new mass-balance model. 
 * Also minor formatting/organisational changes.
 * Removed auto-generation of NetCDF handling code - using latest build, but hardwired
 * Made formatting changes to NetCDF routines
 * Updated build routine to take account of NetCDF changes

2005-01-07 Ian Rutt
 * Made substantial changes to structure to enable to begin process of allowing the 
   Energy-balance mass-balance model to be used in Glimmer. Needs testing, though.

2004-11-10 Ian Rutt
 * Changed scale_factor_at_projection_origin to scale_factor_at_proj_origin, to comply
   with f95 standard - identifiers must be 31 characters or less.

2004-11-08 Ian Rutt
 * Added loading of standard deviation field into glimmer (not used yet).
 * Added subroutine to define CF projection by hand, if necessary
 * Update input2ncdf.f90 to allow projection definition.

2004-11-04 Ian Rutt
 * Added area considerations of mean_to_local subroutine in glimmer_interp.f90 (not used
   in glimmer itself).

2004-10-21 Ian Rutt
 * Sorted out water budgeting. This is something of a fudge, for although
   melt and run-off maps are determined reasonably well, an overall constant
   is added to ablation to account for any non-conservation of mass in the dynamics.